--- a/jit.ndi.send.vcxproj.filters
+++ b/jit.ndi.send.vcxproj.filters
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\jit.ndi.send.cpp" />
-    <ClCompile Include="src\max.jit.ndi.send.cpp" />
     <ClCompile Include="$(C74SUPPORT)\max-includes\common\commonsyms.c">
       <Filter>Max SDK</Filter>
     </ClCompile>
     <ClCompile Include="$(C74SUPPORT)\max-includes\common\dllmain_win.c">
       <Filter>Max SDK</Filter>
     </ClCompile>
+    <ClCompile Include="src\jit.ndi.send.c" />
+    <ClCompile Include="src\max.jit.ndi.send.c" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Max SDK">
