Now loads runtime DLL dynamically. No longer needs SDK installed to build.

--- a/jit.ndi.send.vcxproj
+++ b/jit.ndi.send.vcxproj
@@ -265,6 +265,9 @@
     <ClCompile Include="src\jit.ndi.send.c" />
     <ClCompile Include="src\max.jit.ndi.send.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\ndi_runtime.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
