--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/max-sdk"]
 	path = lib/max-sdk
 	url = https://github.com/Cycling74/max-sdk
+[submodule "lib/yxml"]
+	path = lib/yxml
+	url = https://g.blicky.net/yxml.git
