--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "lib/max-sdk"]
-	path = lib/max-sdk
-	url = https://github.com/Cycling74/max-sdk
-[submodule "lib/yxml"]
-	path = lib/yxml
+[submodule "source/max-sdk-base"]
+	path = source/max-sdk-base
+	url = https://github.com/Cycling74/max-sdk-base
+[submodule "source/yxml"]
+	path = source/yxml
 	url = https://g.blicky.net/yxml.git
